[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "qstack"
#version = "0.0.0"
dynamic = ["version"]
description = "Stack of codes for dedicated pre- and post-processing tasks for Quantum Machine Learning"
readme = "README.md"
license = {file = "LICENSE"}

authors = [
    {name = "Alberto Fabrizio"},  # orcid = "0000-0002-4440-3149"
    {name = "Ksenia Briling", email = "ksenia.briling@epfl.ch"},  # orcid = "0000-0003-2250-9898"
    {name = "Yannick Calvino", email = "yannick.calvinoalonso@epfl.ch"},  # orcid = "0009-0008-9573-7772"
    {name = "Liam Marsh", email = "liam.marsh@epfl.ch"},  # orcid = "0000-0002-7276-5673"
]
maintainers = [
    {name = "Ksenia Briling", email = "ksenia.briling@epfl.ch"},  # orcid = "0000-0003-2250-9898"
    {name = "Yannick Calvino", email = "yannick.calvinoalonso@epfl.ch"},  # orcid = "0009-0008-9573-7772"
    {name = "Liam Marsh", email = "liam.marsh@epfl.ch"},  # orcid = "0000-0002-7276-5673"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: Implementation :: CPython",
]

# note: minimal versions were just copy-pasted from requirements.txt, some earlier versions may also work
# note: maximal versions are just the latest versions to exist when compatibility checks were made, later versions may also work
requires-python = ">=3.9"
dependencies = [
    'numpy >= 1.22.3, < 1.27',
    'scipy >= 1.1.0, < 1.14',
    'pyscf >= 2.0.1, < 2.6',
    'tqdm >= 4.66',
]

[project.optional-dependencies]
#qml = ["qstack-qml @ file://qstack/qstack-qml"]  # this is managed in setup.py because of course.
regression = ["scikit-learn >= 0.24.2, < 1.6"]
wigner = ["sympy >= 1.5, < 1.13"]
gmol = ["cell2mol @ git+https://github.com/lcmd-epfl/cell2mol.git@22473bbf12a013467137a55a63c88fbbdc95baa2"]  #	branch:	dev, date: 2024-06-06
equio = ["metatensor-core >= 0.1.8, == 0.1.*"]
all = ["qstack[qml,regression,wigner,equio,gmol]"]

[project.urls]
Repository = "https://github.com/lcmd-epfl/Q-stack.git"
"Bug Tracker" = "https://github.com/lcmd-epfl/Q-stack/issues"


[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests","examples"]
namespaces = false
[tool.setuptools.package-data]
"*" = ['regression/lib/manh.c', 'spahm/rho/basis_opt/*.bas']
