[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "qstack"
#version = "0.0.0"
dynamic = ["version"]
description = "Stack of codes for dedicated pre- and post-processing tasks for Quantum Machine Learning"
readme = "README.md"
license = {file = "LICENSE"}

authors = [
    {name = "Alberto Fabrizio"},  # orcid = "0000-0002-4440-3149"
    {name = "Ksenia Briling", email = "ksenia.briling@epfl.ch"},  # orcid = "0000-0003-2250-9898"
    {name = "Yannick Calvino", email = "yannick.calvinoalonso@epfl.ch"},  # orcid = "0009-0008-9573-7772"
    {name = "Liam Marsh", email = "liam.marsh@epfl.ch"},  # orcid = "0000-0002-7276-5673"
]
maintainers = [
    {name = "Ksenia Briling", email = "ksenia.briling@epfl.ch"},  # orcid = "0000-0003-2250-9898"
    {name = "Yannick Calvino", email = "yannick.calvinoalonso@epfl.ch"},  # orcid = "0009-0008-9573-7772"
    {name = "Liam Marsh", email = "liam.marsh@epfl.ch"},  # orcid = "0000-0002-7276-5673"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: Implementation :: CPython",
]

# note: minimal versions were just copy-pasted from requirements.txt, some earlier versions may also work
# note: maximal versions are just the latest versions to exist when compatibility checks were made, later versions may also work
requires-python = ">=3.9"
dependencies = [
    'numpy >= 1.22.3, < 2.4',
    'scipy >= 1.1.0, < 1.17',
    'tqdm >= 4.66',
]

[project.optional-dependencies]
pyscf = ['pyscf >= 2.0.1, < 2.12']
qml = ['ase >= 3.22, < 3.27']
regression = ["scikit-learn >= 0.24.2, < 1.8"]
wigner = ["sympy >= 1.5, < 1.15"]
gmol = ["cell2mol @ git+https://github.com/lcmd-epfl/cell2mol.git@feat/pydantic"]
equio = ["metatensor-core >= 0.1.8, == 0.1.*"]
all = ["qstack[pyscf,qml,regression,wigner,equio,gmol]"]

[project.urls]
Repository = "https://github.com/lcmd-epfl/Q-stack.git"
"Bug Tracker" = "https://github.com/lcmd-epfl/Q-stack/issues"


[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests","examples"]
namespaces = false
[tool.setuptools.package-data]
"*" = ['regression/lib/manh.c', 'spahm/rho/basis_opt/*.bas']
