[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "qstack-qml"
version = "0.0.1"
description = "A set of geometric descriptors used by qstack (codes for dedicated pre- and post-processing tasks for Quantum Machine Learning)"
readme = "README.md"
license = {file = "LICENSE"}

authors = [
    {name = "Ksenia Briling", email = "ksenia.briling@epfl.ch"},  # orcid = "0000-0003-2250-9898"
    {name = "Yannick Calvino", email = "yannick.calvinoalonso@epfl.ch"},  # orcid = "0009-0008-9573-7772"
]
maintainers = [
    {name = "Ksenia Briling", email = "ksenia.briling@epfl.ch"},  # orcid = "0000-0003-2250-9898"
    {name = "Yannick Calvino", email = "yannick.calvinoalonso@epfl.ch"},  # orcid = "0009-0008-9573-7772"
    {name = "Liam Marsh", email = "liam.marsh@epfl.ch"},  # orcid = "0000-0002-7276-5673"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
]

# note: minimal versions were just copy-pasted from requirements.txt, some earlier versions may also work
# note: maximal versions are just the latest versions to exist when compatibility checks were made, later versions may also work
requires-python = ">= 3.9"
dependencies = [
    'numpy >= 1.22.3, < 2.4',
    'scipy >= 1.1.0, < 1.17',
    'tqdm >= 4.66',
    'ase >= 3.22, < 3.27',
]

[project.urls]
Repository = "https://github.com/lcmd-epfl/Q-stack.git"
"Bug Tracker" = "https://github.com/lcmd-epfl/Q-stack/issues"


[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests","examples"]
namespaces = false

